# plonk

./: .codecov.yml  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  codecov.yaml  codecov.yml  deny.toml  index.html  katex-header.html  notation.md  pk_testcirc  refactor_circuit.md  rust-toolchain  rust-toolchain.toml  search-index.js  settings.html  source-files.js  vk_testcirc
.cargo/: config.toml
.github/: CODE_OF_CONDUCT.md  codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  specs.md
.github/actions-rs/: grcov.yml
.github/workflows/: dusk_ci.yml
benches/: plonk.rs  polynomial.rs  prove_verify.rs
benchmarks/: plonk_benchmarks.rs
docs/: Introduction.md  finite_fields_elliptic_curve.md  intro.md  katex-header.html  notes-KZG10.md  notes-commitments.md  notes-composer.md  notes-intro.md  notes-lp.md  notes-pa.md  notes-pp.md  notes-prove-verify.md  notes-snark.md  pairing.md  plonk_basics.md  rustdoc-include-katex.html  zero_knowledge.md
docs /: Introduction.md  notes-KZG10.md  notes-commitments.md  notes-interpolation.md  notes-lp.md  notes-pa.md  notes-prove-verify.md  notes-snark.md
dusk_plonk/: all.html  index.html  sidebar-items.js
dusk_plonk/commitment_scheme/: index.html  sidebar-items.js
dusk_plonk/commitment_scheme/kzg10/: index.html  sidebar-items.js  struct.AggregateProof.html  struct.Commitment.html  struct.Proof.html
dusk_plonk/constraint_system/: enum.WireData.html  index.html  sidebar-items.js  struct.StandardComposer.html  struct.Variable.html
dusk_plonk/constraint_system/arithmetic/: index.html
dusk_plonk/constraint_system/boolean/: index.html
dusk_plonk/constraint_system/composer/: struct.StandardComposer.html
dusk_plonk/constraint_system/cs_errors/: enum.PreProcessingError.html  struct.ProvingError.html
dusk_plonk/constraint_system/ecc/: fn.curve_addition.html  fn.scalar_mul.html  index.html  sidebar-items.js  struct.Point.html  struct.PointScalar.html
dusk_plonk/constraint_system/logic/: index.html
dusk_plonk/constraint_system/range/: index.html
dusk_plonk/constraint_system/variable/: enum.WireData.html  struct.Variable.html
dusk_plonk/fft/: index.html  sidebar-items.js  struct.EvaluationDomain.html  struct.Evaluations.html  struct.Polynomial.html
dusk_plonk/fft/domain/: struct.EvaluationDomain.html
dusk_plonk/fft/evaluations/: struct.Evaluations.html
dusk_plonk/fft/fft_errors/: enum.FFTErrors.html  struct.FFTError.html
dusk_plonk/notes/: index.html  sidebar-items.js
dusk_plonk/prelude/: index.html  sidebar-items.js  struct.BlsScalar.html  struct.JubJubScalar.html  struct.ProverKey.html  struct.StandardComposer.html  struct.Variable.html  struct.VerifierKey.html
dusk_plonk/proof_system/: index.html  sidebar-items.js
dusk_plonk/transcript/: index.html  sidebar-items.js  trait.TranscriptProtocol.html
examples/: 0_circuit_construction.rs  0_setup_srs.rs  1_circuit_construction.rs  1_compose_prove_verify.rs  2_gadget_orientation.rs  3_0_setup_for_gadgets.rs  3_1_final_gadget_orientation.rs  3_final_gadget_orientation.rs  circuit.rs  readme.md
implementors/core/cmp/: trait.Eq.js  (+1 more)
implementors/failure/: trait.Fail.js
plookup/: .gitignore  Cargo.toml
plookup/src/: lib.rs  multiset.rs  plookup.rs  prover.rs  table.rs  verifier.rs
plookup/src/table/: hash_tables.rs  lookup_table.rs  mod.rs  preprocess.rs  witness_table.rs
plookup/src/table/hash_tables/: constants.rs  tables.rs
src/: bit_iterator.rs  circuit.rs  circuit_builder.rs  commitment_scheme.rs  compiler.rs  composer.rs  constraint_system.rs  debugger.rs  error.rs  fft.rs  lib.rs  linearisation_poly.rs  macros.rs  opening_poly.rs  permutation.rs  plonkup.rs  prelude.rs  proof_structures.rs  proof_system.rs  quotient_poly.rs  runtime.rs  serialisation.rs  srs.rs  transcript.rs  util.rs
src/circuit_builder/: circuit_builder.rs  mod.rs  pi_pos_holder.rs  pub_inputs.rs
src/commitment_scheme/: kzg10.rs  mod.rs
src/compiler/: prover.rs  verifier.rs
src/composer/: arithmetization.rs  builder.rs  circuit.rs  compiler.rs  compress.rs  constraint_system.rs  gate.rs  permutation.rs  polynomial.rs  prover.rs  verifier.rs
src/constraint_system/: arithmetic.rs  boolean.rs  composer.rs  constants.rs  constraint.rs  cs_errors.rs  divide_w_recip.rs  ecc.rs  helper.rs  linear_combination.rs  logic.rs  mod.rs  permutation.rs  plookup.rs  plookup_composer.rs  range.rs  readme.md  scalar_mul.rs  variable.rs  witness.rs  zelbet.rs
src/cs/: composer.rs  constraint_system.rs  doubly_linked_hashmap.rs  linear_combination.rs  linearisation.rs  linearisation_poly.rs  mod.rs  opening.rs  opening_poly.rs  permutation.rs  poly_utils.rs  proof.rs  public_inputs.rs  quotient_poly.rs
src/dusk_plonk/: bit_iterator.rs.html  lib.rs.html  prelude.rs.html  transcript.rs.html  util.rs.html
src/fft/: constants.rs  domain.rs  evaluations.rs  fft_errors.rs  mod.rs  poly_utils.rs  polynomial.rs
src/permutation/: constants.rs  grand_product.rs  grand_product_lineariser.rs  grand_product_quotient.rs  mod.rs  permutation.rs
src/plonkup/: mod.rs  multiset.rs  plonkup.rs  table.rs
src/plookup/: error.rs  mod.rs  multiset.rs  plookup.rs  plookup_product_argument.rs  table.rs
src/proof_system/: challenger.rs  ladder.rs  linearisation_poly.rs  linearization_poly.rs  lookup_lineariser.rs  lookup_lineariser_debug.rs  lookup_quotient.rs  lookup_quotient_debug.rs  mod.rs  plookup_preprocess.rs  plookup_proof.rs  plookup_prover.rs  plookup_verifier.rs  preprocess.rs  preprocessed_circuit.rs  proof.rs  proof_system_errors.rs  prover.rs  quotient_poly.rs  scalar_mul.rs  verifier.rs  widget.rs
src/proving_system/: linearisation_poly.rs  mod.rs  preprocessed_circuit.rs  prover.rs  quotient_poly.rs
tests/: append_gate.rs  assert_bls.rs  assert_point.rs  assert_scalar.rs  boolean.rs  circuit.rs  composer.rs  debugger.rs  decomposition.rs  ecc.rs  error_size.rs  gate_add_mul.rs  logic.rs  plonk_versioning.rs  prover.rs  public_inputs.rs  range.rs  select_bls.rs  select_point.rs  size.rs
tests/common/: mod.rs
(+217 files in other folders)
