[package]
name = "dusk-plonk"
version = "0.12.0"
categories =["algorithms", "cryptography", "science", "mathematics"]
edition = "2021"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
license = "MPL-2.0"
repository = "https://github.com/dusk-network/plonk"
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm"
exclude = [
    "**/.gitignore",
    ".gitignore",
    "Cargo.lock",
    "**/examples",
    "benchmarks/",
    ".github/"
]

[dependencies]
merlin = {version = "3.0", default-features = false}
rand_core = {version="0.6", default-features=false}
dusk-bytes = "0.1"
dusk-bls12_381 = {version = "0.11", default-features = false, features = ["groups", "pairings", "endo"]}
dusk-jubjub = {version = "0.12", default-features = false}
itertools = {version = "0.9", default-features = false}
hashbrown = {version = "0.9", default-features=false, features = ["ahash"]}
rayon = {version = "1.3", optional = true}
cfg-if = "1.0"
# Dusk related deps for WASMI serde
canonical = {version = "0.7", optional = true}
canonical_derive = {version = "0.7", optional = true}
rkyv = {version = "0.7", optional = true}
bytecheck = {version = "0.6", optional = true}
backtrace = {version = "0.3", optional = true}
dusk-cdf = {version = "0.4", optional = true}

[dev-dependencies]
criterion = "0.3"
tempdir = "0.3"
rand = "0.8"

[[bench]]
name = "plonk"
harness = false

[features]
default = ["std"]
std = [
    "rand_core/std",
    "dusk-bls12_381/default",  # Includes `parallel`
    "dusk-jubjub/default",
    "itertools/default",
    "hashbrown/default",
    "alloc",
    "rayon"
]
alloc = ["dusk-bls12_381/alloc"]
debug = ["dusk-cdf", "backtrace"]
canon = ["dusk-bls12_381/canon", "dusk-jubjub/canon", "canonical", "canonical_derive"]
rkyv-impl = ["dusk-bls12_381/rkyv-impl", "dusk-jubjub/rkyv-impl", "rkyv", "bytecheck"]

[profile.release]
panic = "abort"
codegen-units = 1
overflow-checks = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./docs/katex-header.html" ]
