[package]
name = "zero-plonk"
version = "0.13.1"
categories =["algorithms", "cryptography", "science", "mathematics"]
edition = "2021"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
license = "MPL-2.0"
repository = "https://github.com/dusk-network/plonk"
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm"
exclude = [
    "**/.gitignore",
    ".gitignore",
    "Cargo.lock",
    "**/examples",
    "benchmarks/",
    ".github/"
]

[dependencies]
merlin = {version = "3.0", default-features = false}
rand_core = {version="0.6", default-features=false}
itertools = {version = "0.9", default-features = false}
hashbrown = {version = "0.9", default-features=false, features = ["ahash"]}
rayon = {version = "1.3", optional = true}
cfg-if = "1.0"
# Dusk related deps for WASMI serde
canonical = {version = "0.7", optional = true}
canonical_derive = {version = "0.7", optional = true}
bytecheck = {version = "0.6", optional = true, default-features = false}
backtrace = {version = "0.3", optional = true}
dusk-cdf = {version = "0.5", optional = true}
dusk-bytes = { version = "0.1", default-features=false }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
sp-std = { version = '3.0.0', default-features = false }

zero-bls12-381 = {path="../bls12_381"}
zero-crypto = {path="../crypto"}
zero-jubjub = {path="../jubjub"}
zero-pairing = {path="../pairing"}

[dev-dependencies]
criterion = "0.3"
tempdir = "0.3"
rand = "0.8"

[[bench]]
name = "plonk"
harness = false

[features]
default = ["std"]
std = [
    "itertools/default",
    "hashbrown/default",
    "alloc",
    "rayon"
]
alloc = []
debug = ["dusk-cdf", "backtrace"]
canon = ["canonical", "canonical_derive"]

[profile.release]
panic = "abort"
codegen-units = 1
overflow-checks = false
debug = true

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1

[[test]]
name = "debugger"
required-features = ["debug", "std"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./docs/katex-header.html" ]
