[package]
name = "dusk-plookup"
version = "0.1.0"
authors = ["Luke Pearson <luke@dusk.network>"] 
readme = "README.md"
repository = "https://github.com/dusk-network/plonk"
license = "MPL-2.0"
exclude = [
    "**/.gitignore",
    ".gitignore",
    "Cargo.lock",
    "**/examples",
    "benchmarks/",
    ".github/"
]
edition = "2018"

[dependencies]
dusk-plonk = { path = "../" }
merlin = "2.0.0"
rand = "0.7.2"
rand_core = { version = "0.5", default-features = false }
# Built by default with "std", "alloc", "pairing", "groups" and "endo" features.
dusk-bls12_381 = "0.3.0"
itertools = "0.9.0"
rand_chacha = "0.2"
rayon = "1.3.0"
anyhow = "1.0.32"
dusk-jubjub = "0.5.0"
thiserror = "1.0"
serde = "1.0"
# Dusk related deps for WASMI serde
canonical = {version = "0.4", optional = true}

[dev-dependencies]
rand = "0.7.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[features]
nightly = []
trace = []
trace-print = ["trace"]
canon = ["dusk-bls12_381/canon", "dusk-jubjub/canon", "canonical"]