[package]
name = "dusk-plookup"
version = "0.1.0"
authors =  ["Luke Pearson <luke@dusk.network>",
        "Errol Drummond <errol@dusk.network>"] 
readme = "README.md"
repository = "https://github.com/dusk-network/plonk"
license = "MPL-2.0"
exclude = [
    "**/.gitignore",
    ".gitignore",
    "Cargo.lock",
    "**/examples",
    "benchmarks/",
    ".github/"
]
edition = "2018"

[dependencies]
dusk-plonk = { path = "../" }
anyhow = "1.0.32"
thiserror = "1.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[features]
nightly = []
trace = []
trace-print = ["trace"]
